Update dependencies and nodemon command
Update dependencies and avoid crash when server reload by killing
port before

--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node ./src/index.js",
+    "start": "nodemon src/index.js --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
+    "@babel/preset-env": "^7.6.3",
     "faker": "^4.1.0",
-    "graphql-yoga": "^1.16.7"
-  },
-  "devDependencies": {
-    "nodemon": "^1.17.5"
+    "graphql-yoga": "^1.18.3",
+    "kill-port": "^1.6.0",
+    "nodemon": "^1.19.4"
   }
 }
