--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,7 @@ services:
       - server
     ports:
       - "3000:3000"
+  db:
+    image: amazon/dynamodb-local
+    ports:
+      - "8000:8000"
